fix(v0.8-board-fixes): board review hardening — async ingest, Redis cache, N+1 alerts, Flyway, MDC, OpenAPI, pagination, IP validation
Critical:
- C1: afterCommit hook prevents cache poisoning on DB rollback
- C2: @Async ingestionExecutor + CallerRunsPolicy; 202 Accepted

Major:
- M1: EnrichedEvent implements Persistable<String> — force INSERT not MERGE
- M2: RedisRepeatOffenderCache (sorted sets); @ConditionalOnProperty
- M3: countByCategoriesFrom batch query; N+1 eliminated
- M4: validateTimestamps() extracted — sync 422 before async dispatch
- M5: @Pattern(^[\d.:a-fA-F]+$) on clientIp
- M6: @NotBlank on RuleInfoDto.ruleName
- M7: page-number pagination; PageRequest.of(page, limit)

Minor:
- m1: removed dead countByClientIpAndTimestampAfter
- m2: Flyway V1__initial_schema.sql; ddl-auto: validate
- m3: RequestIdFilter MDC requestId + X-Request-Id
- m4: synchronized AlertService.define()
- m5: Micrometer wsa.events.accepted/rejected counters
- m6: OpenAPI @Tag/@Operation/@ApiResponse on all controllers

Docs:
- doc/HLD.md: updated architecture, data flow, IoC/DAL, scalability, board review summary
- doc/TECH_DESIGN.md: package structure, repo, services, enrichment, CacheConfig, Docker
- README.md: 202 Accepted, page-based pagination, async/Redis/Flyway sections
- doc/team-infographic.html: Phase 6 board review, findings table, v0.8 git log