@@ -3,6 +3,7 @@ package com.akamai.miniwsa.web;
 import com.akamai.miniwsa.dto.error.ApiError;
 import com.akamai.miniwsa.service.BatchTooLargeException;
 import com.akamai.miniwsa.service.FutureTimestampException;
+import lombok.extern.slf4j.Slf4j;
 import jakarta.validation.ConstraintViolationException;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
@@ -10,12 +11,13 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
+import org.springframework.web.servlet.resource.NoResourceFoundException;
 
 import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
+@Slf4j
 public class GlobalExceptionHandler {
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
@@ -24,7 +26,7 @@ public class GlobalExceptionHandler {
                 .getFieldErrors()
                 .stream()
                 .map(fe -> new ApiError.FieldViolation(fe.getField(), fe.getDefaultMessage()))
-                .collect(Collectors.toList());
+                .toList();
         ApiError error = new ApiError(
                 Instant.now(),
                 HttpStatus.BAD_REQUEST.value(),
@@ -41,12 +43,13 @@ public class GlobalExceptionHandler {
                 .stream()
                 .map(cv -> new ApiError.FieldViolation(
                         cv.getPropertyPath().toString(), cv.getMessage()))
-                .collect(Collectors.toList());
+                .toList();
+        // Do NOT expose ex.getMessage() — it leaks internal class names and Hibernate paths
         ApiError error = new ApiError(
                 Instant.now(),
                 HttpStatus.BAD_REQUEST.value(),
                 "Constraint Violation",
-                ex.getMessage(),
+                "One or more field constraints were violated",
                 violations
         );
         return ResponseEntity.badRequest().body(error);
@@ -77,8 +80,14 @@ public class GlobalExceptionHandler {
         return buildError(HttpStatus.CONFLICT, "Duplicate Event", "Event ID already exists");
     }
 
+    @ExceptionHandler(NoResourceFoundException.class)
+    public ResponseEntity<ApiError> handleNotFound(NoResourceFoundException ex) {
+        return buildError(HttpStatus.NOT_FOUND, "Not Found", ex.getMessage());
+    }
+
     @ExceptionHandler(Exception.class)
     public ResponseEntity<ApiError> handleGeneral(Exception ex) {
+        log.error("Unhandled exception: {}", ex.getMessage(), ex);
         return buildError(HttpStatus.INTERNAL_SERVER_ERROR, "Internal Server Error",
                 "An unexpected error occurred");
     }
